--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -50,7 +50,7 @@ body {
     background-repeat: no-repeat;
     position: relative;
     // width: 100vw;
-    // height: 100%;
+     min-height: 100vh;
 
     @media only screen and (max-width: $bp-largest) {
         overflow-y: auto;
