--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,7 +1,350 @@
-.contact-element{
-        grid-column: 1/7;
-        grid-row: 1/3;
-        background-color: rgba( #fff,  0.6);
-        width: 100%;
-        height: 100%;
+.contact {
+        width: 60vw;
+        height: 700px;
+        font-family: 'Segoe UI';
+        color: #2B6F71;
+        z-index: 2;
+        position: relative;
+        backface-visibility: hidden;
+        transition: all .5s;
+
+        //perfect spin
+        perspective: 150rem;
+        -moz-perspective: 150rem;
+
+        &__side {
+                backface-visibility: hidden;
+                transition: all .5s;
+                overflow: hidden;
+        }
+
+        &__front {
+                background-color: rgba(#fff, 0.9);
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+        }
+
+        &__back {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                transform: rotateY(180deg);
+                background-color: rgba(#fff, 0.9);
+        }
+
+        //FRONT SIDE STYLING
+        &__header {
+                margin-top: 6rem;
+                font-size: 6rem;
+                font-weight: normal;
+                text-align: center;
+
+        }
+
+        &__info {
+                font-size: 4rem;
+                margin-left: 5rem;
+                margin-top: 8rem;
+
+                p {
+                        margin: 2rem;
+                        margin-top: 5rem;
+
+                        .email {
+                                position: relative;
+
+                                &,
+                                &:link,
+                                &:visited {
+                                        text-decoration: none;
+                                        color: inherit;
+                                }
+
+                                &::before {
+                                        content: "";
+                                        background-color: #2B6F71;
+                                        position: absolute;
+                                        width: 0%;
+                                        height: 2px;
+                                        top: 102%;
+                                        left: 50%;
+                                        transition: all .5s;
+                                        position: absolute;
+
+                                }
+
+                                &:hover:before {
+                                        width: 100%;
+                                        left: 0;
+                                }
+                        }
+
+                        .github {
+                                position: relative;
+
+                                &,
+                                &:link,
+                                &:visited {
+                                        text-decoration: none;
+                                        color: inherit;
+                                }
+
+                                &::before {
+                                        content: "";
+                                        background-color: #2B6F71;
+                                        position: absolute;
+                                        width: 0%;
+                                        height: 2px;
+                                        top: 102%;
+                                        left: 50%;
+                                        transition: all .5s;
+                                        position: absolute;
+
+                                }
+
+                                &:hover:before {
+                                        width: 100%;
+                                        left: 0;
+                                }
+                        }
+
+                }
+
+        }
+
+        &__btn {
+                background-color: #2B6F71;
+                display: block;
+                color: #fff;
+                font-size: 3rem;
+                padding: 2rem;
+                margin: 0 auto;
+                width: 300px;
+                text-align: center;
+                margin-top: 7rem;
+                transition: all .2s;
+                cursor: pointer;
+
+                &:hover {
+                        box-shadow: 5px 5px 10px rgba(#000, 0.9);
+                        transform: translateY(-5px);
+                }
+        }
+
+        //BACK SIDE STYLING
+
+        &__header-back {
+                margin-top: 2rem;
+                font-size: 4rem;
+                font-weight: normal;
+                text-align: center;
+        }
+
+        &__back-icon {
+                position: absolute;
+                width: 50px;
+                height: 50px;
+                top: 20px;
+                right: 60px;
+                fill: #F99059;
+                transition: all .5s;
+                cursor: pointer;
+
+                &:hover {
+                        transform: scale(1.1) translateY(-10px);
+                }
+        }
+
+}
+
+.form {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 60%;
+
+        //FIELD 1
+        &__your-name-surname {
+                width: 90%;
+                height: 100px;
+                display: flex;
+                align-items: flex-end;
+                justify-content: flex-start;
+                position: relative;
+
+        }
+
+        &__your-name-surname::before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                margin-top: 5px;
+                background-color: #2B6F71;
+        }
+
+        &__your-name-surname:focus-within::before {
+                background: rgb(52, 164, 255);
+
+        }
+
+        &__user-icon {
+                width: 50px;
+                height: 50px;
+                fill: #F99059;
+                cursor: pointer;
+        }
+
+        &__input-name-surname {
+                margin-bottom: 2px;
+                margin-left: 20px;
+                background-color: rgba($color: #000000, $alpha: 0);
+                border: none;
+                width: 100%;
+                font-size: 30px;
+                font-weight: 100;
+                color: #2B6F71;
+                outline: none;
+
+                &::placeholder {
+                        font-family: 'Segoe UI';
+                        font-weight: 100;
+                        font-size: 25px;
+                        color: #2B6F71;
+                }
+        }
+
+
+
+        //FIELD 2 
+
+        &__your-email {
+                width: 90%;
+                height: 100px;
+                // background-color: red;
+                display: flex;
+                align-items: flex-end;
+                justify-content: flex-start;
+                position: relative;
+        }
+
+        &__your-email::before {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                margin-top: 5px;
+                background-color: #2B6F71;
+        }
+
+        &__your-email:focus-within::before {
+                background: rgb(52, 164, 255);
+
+        }
+
+        &__email-icon {
+                width: 50px;
+                height: 50px;
+                fill: #F99059;
+                cursor: pointer;
+        }
+
+        &__input-email {
+                margin-bottom: 2px;
+                margin-left: 20px;
+                background-color: rgba($color: #000000, $alpha: 0);
+                border: none;
+                width: 100%;
+                font-size: 30px;
+                font-weight: 100;
+                color: #2B6F71;
+                outline: none;
+
+                &::placeholder {
+                        font-family: 'Segoe UI';
+                        font-weight: 100;
+                        font-size: 25px;
+                        color: #2B6F71;
+                }
+        }
+
+
+        //FIELD 3 
+
+        &__your-message {
+                margin-top: 15px;
+                width: 90%;
+                height: 300px;
+                display: flex;
+                align-items: flex-start;
+                justify-content: flex-start;
+                position: relative;
+
+        }
+
+        &__your-message::before {
+                content: "";
+                bottom: 0;
+                position: absolute;
+                width: 100%;
+                height: 2px;
+                margin-top: 5px;
+                background-color: #2B6F71;
+        }
+
+        &__your-message:focus-within::before {
+                background: rgb(52, 164, 255);
+        }
+
+        &__message-icon {
+                width: 50px;
+                height: 50px;
+                fill: #F99059;
+                cursor: pointer;
+        }
+
+        &__textarea-message {
+                margin-bottom: 2px;
+                margin-left: 20px;
+                background-color: rgba($color: #000000, $alpha: 0);
+                border: none;
+                height: 100%;
+                width: 100%;
+                font-size: 23px;
+                font-weight: 100;
+                color: #2B6F71;
+                outline: none;
+                resize: none;
+
+                &::placeholder {
+                        font-family: 'Segoe UI';
+                        font-weight: 100;
+                        font-size: 25px;
+                        color: #2B6F71;
+                }
+        }
+
+        &__btn-send {
+                background-color: #2B6F71;
+                color: #fff;
+                font-size: 2.4rem;
+                padding: 1rem 8rem;
+                margin-top: 3rem;
+                border-radius: 10px;
+                cursor: pointer;
+                transition: all .2s;
+
+                &:hover {
+                        box-shadow: 5px 5px 10px rgba(#000, 0.9);
+                        transform: translateY(-5px);
+                }
+        }
+
+
 }
