--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -79,7 +79,7 @@
 
     &__line {
         width: 65%;
-        background-color: #2B6F71;
+        background-color: $color-primary-green;
         height: 5px;
         border-radius: 10px;
         transition: all var(--basic-transition-time);
@@ -108,6 +108,7 @@
     opacity: 0;
     // transform: translateX(-10rem);
     backface-visibility: hidden;
+    // overflow: hidden;
 
     @media only screen and (max-width: $bp-largest) {
         margin: 6rem 0;
@@ -154,7 +155,7 @@
                 content: "";
                 height: 100%;
                 width: 0;
-                background-color: #2B6F71;
+                background-color: $color-primary-green;
                 z-index: -1;
                 transition: all .3s;
             }
@@ -179,7 +180,7 @@
 
     &__line {
         width: 100%;
-        background-color: #2B6F71;
+        background-color: $color-primary-green;
         height: 5px;
         border-radius: 10px;
     }
