--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,20 +1,18 @@
 .contact {
         width: 60vw;
         height: 700px;
-        font-family: 'Segoe UI';
-        color: #2B6F71;
+        color: $color-primary-green;
         z-index: 2;
         position: relative;
         backface-visibility: hidden;
-        transition: all .5s;
-
+        transition: all $basic-transition-time;
         //perfect spin
         perspective: 150rem;
         -moz-perspective: 150rem;
 
         &__side {
                 backface-visibility: hidden;
-                transition: all .5s;
+                transition: all $basic-transition-time;
                 overflow: hidden;
         }
 
@@ -67,13 +65,13 @@
 
                                 &::before {
                                         content: "";
-                                        background-color: #2B6F71;
+                                        background-color: $color-primary-green;
                                         position: absolute;
                                         width: 0%;
                                         height: 2px;
                                         top: 102%;
                                         left: 50%;
-                                        transition: all .5s;
+                                        transition: all $basic-transition-time;
                                         position: absolute;
 
                                 }
@@ -96,13 +94,13 @@
 
                                 &::before {
                                         content: "";
-                                        background-color: #2B6F71;
+                                        background-color: $color-primary-green;
                                         position: absolute;
                                         width: 0%;
                                         height: 2px;
                                         top: 102%;
                                         left: 50%;
-                                        transition: all .5s;
+                                        transition: all $basic-transition-time;
                                         position: absolute;
 
                                 }
@@ -118,7 +116,7 @@
         }
 
         &__btn {
-                background-color: #2B6F71;
+                background-color: $color-primary-green;
                 display: block;
                 color: #fff;
                 font-size: 3rem;
@@ -152,7 +150,7 @@
                 top: 20px;
                 right: 60px;
                 fill: #F99059;
-                transition: all .5s;
+                transition: all $basic-transition-time;
                 cursor: pointer;
 
                 &:hover {
@@ -186,7 +184,7 @@
                 width: 100%;
                 height: 2px;
                 margin-top: 5px;
-                background-color: #2B6F71;
+                background-color: $color-primary-green;
         }
 
         &__your-name-surname:focus-within::before {
@@ -209,14 +207,14 @@
                 width: 100%;
                 font-size: 30px;
                 font-weight: 100;
-                color: #2B6F71;
+                color: $color-primary-green;
                 outline: none;
 
                 &::placeholder {
                         font-family: 'Segoe UI';
                         font-weight: 100;
                         font-size: 25px;
-                        color: #2B6F71;
+                        color: $color-primary-green;
                 }
         }
 
@@ -240,7 +238,7 @@
                 width: 100%;
                 height: 2px;
                 margin-top: 5px;
-                background-color: #2B6F71;
+                background-color: $color-primary-green;
         }
 
         &__your-email:focus-within::before {
@@ -263,14 +261,14 @@
                 width: 100%;
                 font-size: 30px;
                 font-weight: 100;
-                color: #2B6F71;
+                color: $color-primary-green;
                 outline: none;
 
                 &::placeholder {
                         font-family: 'Segoe UI';
                         font-weight: 100;
                         font-size: 25px;
-                        color: #2B6F71;
+                        color: $color-primary-green;
                 }
         }
 
@@ -295,7 +293,7 @@
                 width: 100%;
                 height: 2px;
                 margin-top: 5px;
-                background-color: #2B6F71;
+                background-color: $color-primary-green;
         }
 
         &__your-message:focus-within::before {
@@ -318,7 +316,7 @@
                 width: 100%;
                 font-size: 23px;
                 font-weight: 100;
-                color: #2B6F71;
+                color: $color-primary-green;
                 outline: none;
                 resize: none;
 
@@ -326,12 +324,12 @@
                         font-family: 'Segoe UI';
                         font-weight: 100;
                         font-size: 25px;
-                        color: #2B6F71;
+                        color: $color-primary-green;
                 }
         }
 
         &__btn-send {
-                background-color: #2B6F71;
+                background-color: $color-primary-green;
                 color: #fff;
                 font-size: 2.4rem;
                 padding: 1rem 8rem;
