--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -220,7 +220,7 @@
         fill: #000;
         width: 120px;
         height: 120px;
-        // transition: all .5s;
+        // transition: all $basic-transition-time;
         z-index: 2;
 
         &--1 {
@@ -292,7 +292,7 @@
     &__title {
         text-align: center;
         font-size: 3rem;
-        color: #2B6F71;
+        color: $color-primary-green;
         text-transform: uppercase;
         font-family: 'Segoe UI';
     }
@@ -314,7 +314,7 @@
 
         &--pacman .card__title {
             display: inline-block;
-            background-image: linear-gradient(90deg, rgba(204, 59, 59, 0) 0%, #2B6F71 1%);
+            background-image: linear-gradient(90deg, rgba(204, 59, 59, 0) 0%, $color-primary-green 1%);
             -webkit-background-clip: text;
             color: transparent;
         }
