--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -198,7 +198,7 @@
 
     //FRONT SIDE STYLING
     &__info {
-        fill: #F99059;
+        fill: $color-secondary-orange;
         position: absolute;
         width: 40px;
         height: 40px;
@@ -358,7 +358,7 @@
     //back side styling
 
     &__back-icon {
-        fill: #F99059;
+        fill: $color-secondary-orange;
         width: 40px;
         height: 40px;
         margin: 4px;
