--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -149,7 +149,7 @@
                 height: 50px;
                 top: 20px;
                 right: 60px;
-                fill: #F99059;
+                fill: $color-secondary-orange;
                 transition: all $basic-transition-time;
                 cursor: pointer;
 
@@ -195,7 +195,7 @@
         &__user-icon {
                 width: 50px;
                 height: 50px;
-                fill: #F99059;
+                fill: $color-secondary-orange;
                 cursor: pointer;
         }
 
@@ -249,7 +249,7 @@
         &__email-icon {
                 width: 50px;
                 height: 50px;
-                fill: #F99059;
+                fill: $color-secondary-orange;
                 cursor: pointer;
         }
 
@@ -303,7 +303,7 @@
         &__message-icon {
                 width: 50px;
                 height: 50px;
-                fill: #F99059;
+                fill: $color-secondary-orange;
                 cursor: pointer;
         }
 
