--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@ body {
 }
 
 .card__printing-paper div {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: bold;
   color: #000;
   text-align: center;
@@ -303,7 +303,7 @@ body {
           flex-direction: column;
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .card__info {
@@ -399,7 +399,7 @@ body {
   font-size: 3rem;
   color: #2B6F71;
   text-transform: uppercase;
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
 }
 
 .card__link, .card__link:link, .card__link:visited {
@@ -481,9 +481,12 @@ body {
 }
 
 .card__about {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
+  height: 98%;
   font-size: 2rem;
   margin: 1rem;
+  margin-top: 0;
+  overflow-y: auto;
 }
 
 .back-all-card {
@@ -636,7 +639,7 @@ body {
 }
 
 .menu__item {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   text-align: center;
   height: 90px;
   display: -webkit-box;
@@ -708,9 +711,38 @@ body {
           backface-visibility: hidden;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+  margin-left: var(--menu-close-width);
   -webkit-perspective: 150rem;
           perspective: 150rem;
   -moz-perspective: 150rem;
+}
+
+@media only screen and (max-width: 68.75em) {
+  .contact {
+    height: 700px;
+    width: 50vw;
+  }
+}
+
+@media only screen and (max-width: 53.125em) {
+  .contact {
+    margin-top: 130;
+    margin-bottom: 50px;
+    margin-left: 0;
+    width: 70vw;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .contact {
+    width: 90vw;
+  }
+}
+
+@media only screen and (max-width: 25em) {
+  .contact {
+    width: 100vw;
+  }
 }
 
 .contact__side {
@@ -754,21 +786,111 @@ body {
   margin-top: 8rem;
 }
 
-.contact__info p {
-  margin: 2rem;
-  margin-top: 5rem;
+@media only screen and (max-width: 87.5em) {
+  .contact__info {
+    font-size: 3rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 
-.contact__info p .email {
+@media only screen and (max-width: 68.75em) {
+  .contact__info {
+    font-size: 2rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media only screen and (max-width: 62.5em) {
+  .contact__info {
+    margin-top: 6rem;
+    margin-left: 2rem;
+  }
+}
+
+.contact__info-item {
+  margin-top: 4rem;
+  margin-left: 2rem;
+}
+
+@media only screen and (max-width: 62.5em) {
+  .contact__info-item {
+    margin-left: 0;
+    margin-top: 5rem;
+  }
+}
+
+.contact__name-surname {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .contact__name-surname {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.contact__name-surname-data {
+  margin-left: 2rem;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .contact__name-surname-data {
+    margin-left: 0rem;
+  }
+}
+
+.contact__email {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .contact__email {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.contact__email-link, .contact__email-link:link, .contact__email-link:visited {
   position: relative;
-}
-
-.contact__info p .email, .contact__info p .email:link, .contact__info p .email:visited {
+  margin-left: 2rem;
   text-decoration: none;
   color: inherit;
 }
 
-.contact__info p .email::before {
+@media only screen and (max-width: 37.5em) {
+  .contact__email-link, .contact__email-link:link, .contact__email-link:visited {
+    margin-left: 0rem;
+  }
+}
+
+.contact__email-link::before {
   content: "";
   background-color: #2B6F71;
   position: absolute;
@@ -781,21 +903,67 @@ body {
   position: absolute;
 }
 
-.contact__info p .email:hover:before {
+.contact__email-link:hover:before {
   width: 100%;
   left: 0;
 }
 
-.contact__info p .github {
-  position: relative;
+.contact__email-copy-icon {
+  width: 30px;
+  height: 30px;
+  margin-left: 20px;
+  fill: #F99059;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
 }
 
-.contact__info p .github, .contact__info p .github:link, .contact__info p .github:visited {
+@media only screen and (max-width: 68.75em) {
+  .contact__email-copy-icon {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+.contact__email-copy-icon:hover {
+  -webkit-transform: scale(1.2) translateY(-5px);
+          transform: scale(1.2) translateY(-5px);
+}
+
+.contact__email-copy-icon:active {
+  -webkit-transform: scale(1.3) translateY(-15px);
+          transform: scale(1.3) translateY(-15px);
+}
+
+.contact__github {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .contact__github {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.contact__github-link, .contact__github-link:link, .contact__github-link:visited {
+  margin-left: 2rem;
+  position: relative;
   text-decoration: none;
   color: inherit;
 }
 
-.contact__info p .github::before {
+@media only screen and (max-width: 37.5em) {
+  .contact__github-link, .contact__github-link:link, .contact__github-link:visited {
+    margin-left: 0rem;
+  }
+}
+
+.contact__github-link::before {
   content: "";
   background-color: #2B6F71;
   position: absolute;
@@ -808,7 +976,7 @@ body {
   position: absolute;
 }
 
-.contact__info p .github:hover:before {
+.contact__github-link:hover:before {
   width: 100%;
   left: 0;
 }
@@ -822,7 +990,7 @@ body {
   margin: 0 auto;
   width: 300px;
   text-align: center;
-  margin-top: 7rem;
+  margin-top: 6rem;
   -webkit-transition: all .2s;
   transition: all .2s;
   cursor: pointer;
@@ -835,11 +1003,31 @@ body {
           transform: translateY(-5px);
 }
 
+@media only screen and (max-width: 68.75em) {
+  .contact__btn {
+    margin-top: 140px;
+    width: 200px;
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .contact__btn {
+    margin-top: 5rem;
+  }
+}
+
 .contact__header-back {
   margin-top: 2rem;
   font-size: 4rem;
   font-weight: normal;
   text-align: center;
+}
+
+@media only screen and (max-width: 62.5em) {
+  .contact__header-back {
+    margin-top: 5rem;
+  }
 }
 
 .contact__back-icon {
@@ -852,6 +1040,13 @@ body {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 62.5em) {
+  .contact__back-icon {
+    top: 10px;
+    right: 20px;
+  }
 }
 
 .contact__back-icon:hover {
@@ -872,6 +1067,18 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 60%;
+}
+
+@media only screen and (max-width: 68.75em) {
+  .form {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 62.5em) {
+  .form {
+    width: 95%;
+  }
 }
 
 .form__your-name-surname {
@@ -922,28 +1129,28 @@ body {
 }
 
 .form__input-name-surname::-webkit-input-placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
 }
 
 .form__input-name-surname:-ms-input-placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
 }
 
 .form__input-name-surname::-ms-input-placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
 }
 
 .form__input-name-surname::placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
@@ -997,28 +1204,28 @@ body {
 }
 
 .form__input-email::-webkit-input-placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
 }
 
 .form__input-email:-ms-input-placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
 }
 
 .form__input-email::-ms-input-placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
 }
 
 .form__input-email::placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
@@ -1038,6 +1245,12 @@ body {
       -ms-flex-pack: start;
           justify-content: flex-start;
   position: relative;
+}
+
+@media only screen and (max-width: 62.5em) {
+  .form__your-message {
+    height: 250px;
+  }
 }
 
 .form__your-message::before {
@@ -1076,28 +1289,28 @@ body {
 }
 
 .form__textarea-message::-webkit-input-placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
 }
 
 .form__textarea-message:-ms-input-placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
 }
 
 .form__textarea-message::-ms-input-placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
 }
 
 .form__textarea-message::placeholder {
-  font-family: 'Segoe UI';
+  font-family: "Segoe UI";
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
@@ -1122,6 +1335,23 @@ body {
           transform: translateY(-5px);
 }
 
+@media only screen and (max-width: 53.125em) {
+  .navbar-contact-RWD {
+    height: var(--menu-close-width);
+    width: 100vw;
+  }
+}
+
+@media only screen and (max-width: 53.125em) {
+  .hamburger-contact-RWD {
+    position: absolute;
+    -webkit-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
+    top: 4px;
+    left: 50%;
+  }
+}
+
 .animation-rotate-card-front {
   -webkit-transform: rotateY(-180deg);
           transform: rotateY(-180deg);
@@ -1134,6 +1364,10 @@ body {
 
 .animation-open-navbar {
   width: var(--menu-open-width) !important;
+}
+
+.animation-open-navbar-full-width {
+  width: 100vw !important;
 }
 
 .animate-open-navbar-small-device {
