--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,11 +4,21 @@
 //.navbar{ z-index:5}
 //.back-all-card{ z-index:1}
 
-// BREAKPOINTS 
+// BREAKPOINTS - main site
 $bp-largest: 84.375em; //1350px
 $bp-large: 65.625em; // 1050px
 $bp-medium: 43.75em; //700px
 $bp-small: 28.125em; // 450px
+
+// BREAKPOINTS - contact site
+
+$bp-largest-c: 87.5em ; //1400px
+$bp-large-c: 68.75em ; //1100px
+$bp-medium-c: 62.5em ; //1000px
+$bp-small-c: 53.125em ; //800px
+$bp-smaller-c: 37.5em ; //600px
+$bp-smallest-c: 25em ; //400px
+
 
 //GLOBAL ELEMENT
 
