--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,4 +1,5 @@
 .contact {
+        
         width: 60vw;
         height: 700px;
         color: $color-primary-green;
@@ -6,9 +7,29 @@
         position: relative;
         backface-visibility: hidden;
         transition: all $basic-transition-time;
+        margin-left: var(--menu-close-width);
         //perfect spin
         perspective: 150rem;
         -moz-perspective: 150rem;
+
+        @media only screen and (max-width: $bp-large-c) {
+                height: 700px;
+                width: 50vw;
+        }
+       
+        @media only screen and (max-width: $bp-small-c) {
+
+                margin-top: 130;
+                margin-bottom: 50px;
+                margin-left: 0;
+                width: 70vw;
+        }
+        @media only screen and (max-width: $bp-smaller-c) {
+                width: 90vw;
+        }
+        @media only screen and (max-width: $bp-smallest-c) {
+                width: 100vw;
+        }
 
         &__side {
                 backface-visibility: hidden;
@@ -44,76 +65,252 @@
 
         }
 
+        
+
+        
+
         &__info {
+               
                 font-size: 4rem;
                 margin-left: 5rem;
                 margin-top: 8rem;
+               
+                @media only screen and (max-width: $bp-largest-c) {
+                        font-size: 3rem;
+                        display:flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                }
+                @media only screen and (max-width: $bp-large-c) {
+                        font-size: 2rem;
+                        display:flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                }
+                @media only screen and (max-width: $bp-medium-c) {
+                        margin-top: 6rem;
+                        margin-left: 2rem;
+                }
+               
+                
+        }
 
-                p {
-                        margin: 2rem;
+        // contact items styling
+        &__info-item{
+                margin-top: 4rem;
+                margin-left: 2rem;
+                @media only screen and (max-width: $bp-medium-c) {
+                        margin-left: 0;
                         margin-top: 5rem;
+                }
+        }
+        //first item of card
+        &__name-surname{
+                display: flex;
+                @media only screen and (max-width: $bp-smaller-c) {
+                        flex-direction: column;
+                }
+                
+        }
+        &__name-surname-title{
 
-                        .email {
-                                position: relative;
+        }
+        &__name-surname-data{
+                margin-left: 2rem;
+                @media only screen and (max-width: $bp-smaller-c) {
+                        margin-left: 0rem;
+                }
+                
+        }
+        //second item of card
+        &__email{
+                display: flex;
+                @media only screen and (max-width: $bp-smaller-c) {
+                        flex-direction: column;
+                }
+        }
+        &__email-title{
 
-                                &,
-                                &:link,
-                                &:visited {
-                                        text-decoration: none;
-                                        color: inherit;
-                                }
+        }
+        &__email-data{
 
-                                &::before {
-                                        content: "";
-                                        background-color: $color-primary-green;
-                                        position: absolute;
-                                        width: 0%;
-                                        height: 2px;
-                                        top: 102%;
-                                        left: 50%;
-                                        transition: all $basic-transition-time;
-                                        position: absolute;
-
-                                }
-
-                                &:hover:before {
-                                        width: 100%;
-                                        left: 0;
-                                }
+        }
+        &__email-link{
+                &,
+                &:link,
+                &:visited {
+                        position: relative;
+                        margin-left: 2rem;
+                        text-decoration: none;
+                        color: inherit;
+                        @media only screen and (max-width: $bp-smaller-c) {
+                                margin-left: 0rem;
                         }
+                        
+                }
 
-                        .github {
-                                position: relative;
-
-                                &,
-                                &:link,
-                                &:visited {
-                                        text-decoration: none;
-                                        color: inherit;
-                                }
-
-                                &::before {
-                                        content: "";
-                                        background-color: $color-primary-green;
-                                        position: absolute;
-                                        width: 0%;
-                                        height: 2px;
-                                        top: 102%;
-                                        left: 50%;
-                                        transition: all $basic-transition-time;
-                                        position: absolute;
-
-                                }
-
-                                &:hover:before {
-                                        width: 100%;
-                                        left: 0;
-                                }
-                        }
+                &::before {
+                        content: "";
+                        background-color: $color-primary-green;
+                        position: absolute;
+                        width: 0%;
+                        height: 2px;
+                        top: 102%;
+                        left: 50%;
+                        transition: all $basic-transition-time;
+                        position: absolute;
 
                 }
 
+                &:hover:before {
+                        width: 100%;
+                        left: 0;
+                }
         }
+        &__email-copy-icon{
+                width: 30px;
+                height: 30px;
+                margin-left: 20px;
+                fill: $color-secondary-orange;
+                transition: all .2s;
+                cursor: pointer;
+                @media only screen and (max-width: $bp-large-c) {
+                        width: 20px;
+                        height: 20px;
+                }
+
+                
+                &:hover {
+                        transform: scale(1.2) translateY(-5px);
+                }
+                &:active {
+                        transform: scale(1.3) translateY(-15px)
+                }  
+        }
+        //third item of card
+        &__github{
+                display: flex;
+                @media only screen and (max-width: $bp-smaller-c) {
+                        flex-direction: column;
+                }
+               
+        }
+        &__github-title{
+
+        }
+        &__github-link{
+                &,
+                &:link,
+                &:visited {
+                        margin-left: 2rem;
+                        position: relative;
+                        text-decoration: none;
+                        color: inherit;
+                        @media only screen and (max-width: $bp-smaller-c) {
+                                margin-left: 0rem;
+                        }
+                        
+                }
+
+                &::before {
+                        content: "";
+                        background-color: $color-primary-green;
+                        position: absolute;
+                        width: 0%;
+                        height: 2px;
+                        top: 102%;
+                        left: 50%;
+                        transition: all $basic-transition-time;
+                        position: absolute;
+
+                }
+
+                &:hover:before {
+                        width: 100%;
+                        left: 0;
+                }
+        }
+
+        // &__email{
+        //         position: relative;
+
+        //         .email {
+        //                 position: relative;
+
+        //                 &,
+        //                 &:link,
+        //                 &:visited {
+        //                         text-decoration: none;
+        //                         color: inherit;
+        //                 }
+
+        //                 &::before {
+        //                         content: "";
+        //                         background-color: $color-primary-green;
+        //                         position: absolute;
+        //                         width: 0%;
+        //                         height: 2px;
+        //                         top: 102%;
+        //                         left: 50%;
+        //                         transition: all $basic-transition-time;
+        //                         position: absolute;
+
+        //                 }
+
+        //                 &:hover:before {
+        //                         width: 100%;
+        //                         left: 0;
+        //                 }
+        //         }
+        // }
+        // &__copy-mail-icon {
+        //         position: relative;
+        //         width: 30px;
+        //         height: 30px;
+        //         margin-left: 20px;
+        //         fill: $color-secondary-orange;
+        //         transition: all .2s;
+        //         cursor: pointer;
+
+        //         &:hover {
+        //                 transform: scale(1.2) translateY(-5px);
+        //         }
+        //         &:active {
+        //                 transform: scale(1.3) translateY(-15px)
+        //         }
+
+        // }
+        // &__github{
+
+        //         .github {
+        //                 position: relative;
+
+        //                 &,
+        //                 &:link,
+        //                 &:visited {
+        //                         text-decoration: none;
+        //                         color: inherit;
+        //                 }
+
+        //                 &::before {
+        //                         content: "";
+        //                         background-color: $color-primary-green;
+        //                         position: absolute;
+        //                         width: 0%;
+        //                         height: 2px;
+        //                         top: 102%;
+        //                         left: 50%;
+        //                         transition: all $basic-transition-time;
+        //                         position: absolute;
+
+        //                 }
+
+        //                 &:hover:before {
+        //                         width: 100%;
+        //                         left: 0;
+        //                 }
+        //         }
+        // }
 
         &__btn {
                 background-color: $color-primary-green;
@@ -124,13 +321,23 @@
                 margin: 0 auto;
                 width: 300px;
                 text-align: center;
-                margin-top: 7rem;
+                margin-top: 6rem;
                 transition: all .2s;
                 cursor: pointer;
 
                 &:hover {
                         box-shadow: 5px 5px 10px rgba(#000, 0.9);
                         transform: translateY(-5px);
+                }
+
+                @media only screen and (max-width: $bp-large-c) {
+                        margin-top: 140px;
+                        width: 200px;
+                        font-size: 2rem;
+                }
+
+                @media only screen and (max-width: $bp-smaller-c) {
+                        margin-top: 5rem;
                 }
         }
 
@@ -141,6 +348,10 @@
                 font-size: 4rem;
                 font-weight: normal;
                 text-align: center;
+                @media only screen and (max-width: $bp-medium-c) {
+  
+                        margin-top: 5rem;
+                }
         }
 
         &__back-icon {
@@ -153,10 +364,18 @@
                 transition: all $basic-transition-time;
                 cursor: pointer;
 
+                @media only screen and (max-width: $bp-medium-c) {
+  
+                        top: 10px;
+                        right: 20px;
+                }
+
                 &:hover {
                         transform: scale(1.1) translateY(-10px);
                 }
         }
+
+       
 
 }
 
@@ -166,7 +385,15 @@
         flex-direction: column;
         align-items: center;
         width: 60%;
-
+        @media only screen and (max-width: $bp-large-c) {
+                width: 80%;
+                
+        }
+        @media only screen and (max-width: $bp-medium-c) {
+                width: 95%;
+                
+        }
+        
         //FIELD 1
         &__your-name-surname {
                 width: 90%;
@@ -211,7 +438,7 @@
                 outline: none;
 
                 &::placeholder {
-                        font-family: 'Segoe UI';
+                        font-family: $basic-font;
                         font-weight: 100;
                         font-size: 25px;
                         color: $color-primary-green;
@@ -265,7 +492,7 @@
                 outline: none;
 
                 &::placeholder {
-                        font-family: 'Segoe UI';
+                        font-family: $basic-font;
                         font-weight: 100;
                         font-size: 25px;
                         color: $color-primary-green;
@@ -283,6 +510,9 @@
                 align-items: flex-start;
                 justify-content: flex-start;
                 position: relative;
+                @media only screen and (max-width: $bp-medium-c) {
+                        height: 250px;
+                }
 
         }
 
@@ -321,7 +551,7 @@
                 resize: none;
 
                 &::placeholder {
-                        font-family: 'Segoe UI';
+                        font-family: $basic-font;
                         font-weight: 100;
                         font-size: 25px;
                         color: $color-primary-green;
