--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -123,7 +123,7 @@
 
     &__item {
 
-        font-family: 'Segoe UI';
+        font-family: $basic-font;
         // padding: 3rem 0rem;
         text-align: center;
         // width: 50px;
