--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -27,6 +27,8 @@ $basic-font: 'Segoe UI';
 
 $color-primary-green: #2B6F71;
 $color-secondary-orange: #F99059;
+$color-form-error: red;
+$form-font-size:15px;
 
 
 :root {
