--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html {
           box-sizing: border-box;
   font-size: 62.5%;
 }
-
+ 
 body {
   font-family: "Segoe UI";
   background-image: url("./../img/architectural-design-architecture-buildings-city-374811.jpg");
@@ -1040,6 +1040,7 @@ body {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   cursor: pointer;
+  z-index: 999;
 }
 
 @media only screen and (max-width: 62.5em) {
@@ -1358,6 +1359,29 @@ body {
           transform: translateY(-5px);
 }
 
+.correct-mail-send {
+  position: absolute;
+  top: 0px;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  opacity: 0;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  pointer-events: none;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 @media only screen and (max-width: 53.125em) {
   .navbar-contact-RWD {
     height: var(--menu-close-width);
@@ -1412,6 +1436,10 @@ body {
 .animation-close-menu {
   -webkit-animation: animation-keyframes-close-menu var(--basic-transition-time);
           animation: animation-keyframes-close-menu var(--basic-transition-time);
+}
+
+.show_mail_send_info {
+  opacity: 1;
 }
 
 @-webkit-keyframes animation-printer-card {
