--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -284,17 +284,19 @@
                 fill: $color-secondary-orange;
                 transition: all $basic-transition-time;
                 cursor: pointer;
-
+                z-index: 999;
                 @media only screen and (max-width: $bp-medium-c) {
   
                         top: 10px;
                         right: 20px;
                 }
+                
 
                 &:hover {
                         transform: scale(1.1) translateY(-10px);
                 }
         }
+      
 
        
 
@@ -306,6 +308,7 @@
         flex-direction: column;
         align-items: center;
         width: 60%;
+        // position: relative; 
 
         @media only screen and (max-width: $bp-large-c) {
                 width: 80%;
@@ -521,5 +524,19 @@
                 }
         }
 
-
+}
+.correct-mail-send{
+        position: absolute;
+        top: 0px;
+        background-color: rgb(255, 255, 255);
+        width: 100%;
+        height: 100%;
+        font-size: 20px;
+        opacity: 0;
+        transition: all 1s;
+        pointer-events: none;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 }
