--- a/css/main.css
+++ b/css/main.css
@@ -25,12 +25,12 @@ html {
           box-sizing: border-box;
   font-size: 62.5%;
 }
- 
+
 body {
   font-family: "Segoe UI";
   background-image: url("./../img/architectural-design-architecture-buildings-city-374811.jpg");
   background-size: cover;
-  overflow: hidden;
+  overflow-x: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,6 +43,7 @@ body {
   background-repeat: no-repeat;
   position: relative;
   min-height: 100vh;
+  width: 100vw;
 }
 
 @media only screen and (max-width: 84.375em) {
@@ -52,8 +53,9 @@ body {
 }
 
 .container {
-  display: -ms-grid;
-  display: grid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -61,11 +63,9 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-grid-columns: (100px)[6];
-      grid-template-columns: repeat(6, 100px);
-  -ms-grid-rows: (calc(200px + var(--my-gap)))[2];
-      grid-template-rows: repeat(2, calc(200px + var(--my-gap)));
-  gap: var(--my-gap);
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
   margin-left: var(--menu-close-width);
   -webkit-transition: all var(--basic-transition-time);
   transition: all var(--basic-transition-time);
@@ -73,22 +73,9 @@ body {
 
 @media only screen and (max-width: 84.375em) {
   .container {
-    -ms-grid-columns: (100px)[4];
-        grid-template-columns: repeat(4, 100px);
-    -ms-grid-rows: (calc(200px + var(--my-gap)))[3];
-        grid-template-rows: repeat(3, calc(200px + var(--my-gap)));
     margin-top: 0;
     margin-bottom: auto;
     padding: 2rem;
-  }
-}
-
-@media only screen and (max-width: 65.625em) {
-  .container {
-    -ms-grid-columns: (100px)[2];
-        grid-template-columns: repeat(2, 100px);
-    -ms-grid-rows: (calc(200px + var(--my-gap)))[5];
-        grid-template-rows: repeat(5, calc(200px + var(--my-gap)));
   }
 }
 
@@ -97,7 +84,6 @@ body {
     margin-top: var(--menu-close-width);
     margin-left: 0;
     padding: 0;
-    padding-top: var(--my-gap);
   }
 }
 
@@ -105,55 +91,11 @@ body {
   -webkit-perspective: 150rem;
           perspective: 150rem;
   -moz-perspective: 150rem;
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
   position: relative;
   z-index: 2;
-}
-
-.card--1 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1/3;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-}
-
-.card--2 {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 2;
-  grid-column: 3/5;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-}
-
-.card--3 {
-  -ms-grid-column: 5;
-  -ms-grid-column-span: 2;
-  grid-column: 5/7;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-}
-
-.card--4 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
-}
-
-.card--5 {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 2;
-  grid-column: 4/6;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
+  margin: 3rem;
 }
 
 .card__printing-paper {
@@ -196,68 +138,6 @@ body {
   height: 10px;
   width: 10px;
   z-index: 11;
-}
-
-@media only screen and (max-width: 84.375em) {
-  .card--3 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-  }
-  .card--4 {
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 2;
-    grid-column: 3/5;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-  }
-  .card--5 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-  }
-}
-
-@media only screen and (max-width: 65.625em) {
-  .card--2 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-  }
-  .card--3 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-  }
-  .card--4 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-  }
-  .card--5 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
-    -ms-grid-row: 5;
-    -ms-grid-row-span: 1;
-    grid-row: 5/6;
-  }
 }
 
 .card__side {
@@ -611,12 +491,11 @@ body {
 }
 
 .menu {
-  -ms-grid-column-align: center;
-      justify-self: center;
+  justify-self: flex-start;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  margin: auto 0;
+  margin: 6rem 0;
   width: 80%;
   overflow: hidden;
   -webkit-transition: all var(--basic-transition-time);
@@ -1432,8 +1311,6 @@ body {
 
 .animation-open-menu {
   opacity: 1 !important;
-  -webkit-animation: animation-keyframes-open-menu .9s ease-out .2s;
-          animation: animation-keyframes-open-menu .9s ease-out .2s;
   -webkit-animation-fill-mode: backwards;
           animation-fill-mode: backwards;
 }
