--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -98,10 +98,10 @@
 
 
 .menu {
-    justify-self: center;
+    justify-self: flex-start;
     align-self: center;
     // background-color: red;
-    margin: auto 0;
+    margin: 6rem 0;
     width: 80%;
     overflow: hidden;
     transition: all var(--basic-transition-time);
