--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,39 +1,28 @@
 .container {
 
-    display: grid;
+    display: flex;
     justify-items: center;
     align-items: center;
     justify-content: center;
-    grid-template-columns: repeat(6, 100px);
-    grid-template-rows: repeat(2, calc(200px + var(--my-gap)));
-    gap: var(--my-gap);
-
+    flex-wrap: wrap;
+    width: 100%;
+    
     margin-left: var(--menu-close-width);
     transition: all var(--basic-transition-time);
 
 
     @media only screen and (max-width: $bp-largest) {
-        grid-template-columns: repeat(4, 100px);
-        grid-template-rows: repeat(3, calc(200px + var(--my-gap)));
         margin-top: 0;
         margin-bottom: auto;
         padding: 2rem;
     }
 
 
-    @media only screen and (max-width: $bp-large) {
-
-        grid-template-columns: repeat(2, 100px);
-        grid-template-rows: repeat(5, calc(200px + var(--my-gap)));
-
-    }
-
     @media only screen and (max-width: $bp-small) {
 
         margin-top: var(--menu-close-width);
         margin-left: 0;
         padding: 0;
-        padding-top: var(--my-gap);
     }
 
 
@@ -45,40 +34,12 @@
     perspective: 150rem;
     -moz-perspective: 150rem;
 
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 300px;
     position: relative;
     z-index: 2;
+    margin: 3rem;
 
-
-    &--1 {
-        grid-column: 1/3;
-        grid-row: 1/2;
-
-
-
-
-    }
-
-    &--2 {
-        grid-column: 3/5;
-        grid-row: 1/2;
-    }
-
-    &--3 {
-        grid-column: 5/7;
-        grid-row: 1/2;
-    }
-
-    &--4 {
-        grid-column: 2/4;
-        grid-row: 2/3;
-    }
-
-    &--5 {
-        grid-column: 4/6;
-        grid-row: 2/3;
-    }
 
     &__printing-paper {
         opacity: 0;
@@ -123,46 +84,6 @@
 
     }
 
-    @media only screen and (max-width: $bp-largest) {
-        &--3 {
-            grid-column: 1/3;
-            grid-row: 2/3;
-        }
-
-        &--4 {
-            grid-column: 3/5;
-            grid-row: 2/3;
-        }
-
-        &--5 {
-            grid-column: 2/4;
-            grid-row: 3/4;
-        }
-    }
-
-    @media only screen and (max-width: $bp-large) {
-        &--2 {
-            grid-column: 1/3;
-            grid-row: 2/3;
-        }
-
-        &--3 {
-            grid-column: 1/3;
-            grid-row: 3/4;
-        }
-
-        &--4 {
-            grid-column: 1/3;
-            grid-row: 4/5;
-        }
-
-        &--5 {
-            grid-column: 1/3;
-            grid-row: 5/6;
-        }
-
-
-    }
 
     &__side {
         transition: all .8s ease;
