--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-repeat: no-repeat;
   position: relative;
   min-height: 100vh;
@@ -65,7 +69,8 @@ body {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 100%;
+  -webkit-transition: all .1s;
+  transition: all .1s;
   margin-left: var(--menu-close-width);
   -webkit-transition: all var(--basic-transition-time);
   transition: all var(--basic-transition-time);
@@ -85,6 +90,14 @@ body {
     margin-left: 0;
     padding: 0;
   }
+}
+
+.title {
+  text-align: center;
+  font-size: 7rem;
+  color: white;
+  text-shadow: 10px 10px 10px black;
+  margin-top: auto 0;
 }
 
 .card {
