--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -226,6 +226,10 @@
         }
     }
 
+    &__icon-3-animation {
+        position: relative;
+    }
+
     &__icon-5-animation {
         position: relative;
     }
